# smolswarms

./: .gitignore  .gitmodules  .openhands_instructions  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.backups/: openhands.yml.bak
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coordinator.yml  docs.yml  lint.yml  openhands-resolver.yml  openhands.yml.old  test.yml
docs/: Gemfile  _config.yml  api-reference.md  changelog.md  contributing.md  examples.md  getting-started.md  index.md  roadmap.md  system_prompt.md
docs/_includes/: head_custom.html
docs/assets/css/: custom.scss
docs/guides/: architecture.md  quickstart.md
docs/reference/: swarm-factory.md
smolagents/: __init__.py
smolswarms/: __init__.py  coordinator.py  factory.py  specs.py  swarm.py  swarm_factory.py
smolswarms/.devcontainer/: devcontainer.json  docker-compose.extend.yml
smolswarms/agents/: __init__.py
smolswarms/apps/chat/: Dockerfile  config.yaml  docker-compose.override.yml  docker-compose.yml
smolswarms/core/: __init__.py
smolswarms/models/: __init__.py
smolswarms/utils/: __init__.py
tests/: __init__.py  test_factory.py  test_swarm.py  test_swarm_factory.py
