[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smolswarms"
version = "0.1.0"
description = "Spawn and orchestrate autonomous AI agent swarms that actually do be hitting different fr fr"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gokhan Guney", email = "your.email@example.com" },
]
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.9.4",
    "typer>=0.9.0",
    "PyGithub>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]  # We moved this up because ruff be acting more temperamental than a Discord bot with 999ms ping

[tool.ruff.isort]  # Simplified this whole section because nested TOML tables were causing more drama than a Minecraft server without admins
force-single-line = true
lines-between-types = 1
order-by-type = true
known-first-party = ["smolswarms"]

[tool.mypy]
python_version = "3.10"
warn_return_type = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.dependencies]
smolagents = { git = "https://github.com/UltraInstinct0x/smolagents.git" }