[tool.poetry]
name = "smolswarms"
version = "0.1.0"
description = "A framework that makes AI agent spawning go brr while keeping it more stable than a Redstone computer!"
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smolswarms"
version = "0.1.0"
description = "Spawn and orchestrate autonomous AI agent swarms that actually do be hitting different fr fr"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gokhan Guney", email = "your.email@example.com" },
]
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.9.4",
    "typer>=0.9.0",
    "PyGithub>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = true
known-first-party = ["smolswarms"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.dependencies]
smolagents = { git = "https://github.com/UltraInstinct0x/smolagents.git" }
